k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ionic-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ionic-gallery
  template:
    metadata:
      labels:
        app: ionic-gallery
    spec:
      containers:
        - name: ionic-test
          image: harshparmar009/ionic-gallery:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
