k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ionic-gallery-service
spec:
  selector:
    app: ionic-gallery
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
